--- a/index.css
+++ b/index.css
@@ -2,13 +2,10 @@
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url(./images/download.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 160px;
-    padding-left: 280px;
-    padding-top: 50px;
-    width: 470px;
+        background-image: url("images/download.jpeg");
+        background-size: cover;
+        text-align: center;
+        color: white;
 }
 
 h1 {
