--- a/index.css
+++ b/index.css
@@ -12,4 +12,20 @@ h1 {
     color: goldenrod;
 }
 
-#message-el {}
+#message-el {
+    font-style: italic;
+}
+
+button{
+text-decoration-color : #016f32 ;
+width :150px ;
+background : goldenrod;
+padding-top: 5px;
+padding-bottom: 5px;
+font-weight: bold;
+border: none;
+border-radius: 2 px;
+margin-bottom:4px ;
+margin-top: 2px;
+
+}
